# MovieDirectorSimulator2019

./: .gitignore
gkit2light/: CMakeLists.txt  Makefile  MovieDirectorSimulator2019.cbp  README.md
gkit2light/CMake/: addDependencies.cmake  cmakeConfiguration.cmake
gkit2light/data/shaders/: charaShader.glsl  groundShader.glsl  shaderCamera.glsl
gkit2light/src/: shader_kit.cpp
gkit2light/src/MovieDirectorSimulator2019/: BasicDrawObject.cpp  BasicDrawObject.h  DirectorCamera.cpp  DirectorCamera.h  GameCharacter.cpp  GameCharacter.h  GenericObject.h  Ground.cpp  Ground.h  MovieDirectorSimulator.cpp  MovieDirectorSimulator.h  main.cpp
gkit2light/src/MovieDirectorSimulator2019/Anim/: AIController.cpp  AIController.h  BVH.h  BVHJoint.cpp  CharAnimViewer.cpp  CharAnimViewer.h  CharacterController.cpp  CharacterController.h  CubeController.cpp  CubeController.h  PhysicalWorld.cpp  PhysicalWorld.h  Skeleton.cpp  Skeleton.h  Viewer.cpp  Viewer.h  ViewerBasic.cpp  ViewerBasic.h  main.cpp
gkit2light/src/MovieDirectorSimulator2019/Anim/Animations/: AnimState.h  Crouch.cpp  Crouch.h  CrouchWalk.cpp  CrouchWalk.h  Dance.h  Idle.cpp  Idle.h  Kick.h  NonStopAnim.cpp  NonStopAnim.h  Run.cpp  Run.h  Smoke.cpp  Smoke.h  SmokeIdle.cpp  SmokeIdle.h  Walk.cpp  Walk.h
gkit2light/src/gKit/: quaternion.h
